Libtool version defined for librarires
The GNU Libtool version is now defined for the libraries in
`lib/Makefile.am'. Note that the versioning of the libraries (which is used
by the shared library linker) is different from the main Gnuastro version:
it follows different rules.

Ultimately each release will have a general Gnuastro version that has a
one-to-one correspondance with a specific library version. The library
version of each release is also included in the NEWS file.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -33,6 +33,7 @@ lib_LTLIBRARIES = libgnuastro.la
 libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c fits.c  \
   gnuastro.c linkedlist.c mesh.c mode.c polygon.c qsort.c               \
   spatialconvolve.c statistics.c threads.c timing.c txtarray.c wcs.c
+libgnuastro_la_LDFLAGS = -version-info 0:0:0
 
 
 # Specify the installed headers, note that we are not blindly including all
