Gnuastro's version is a macro in the library
Until now, Gnuastro's version was reported by a function declared in
`gnuastro.h' and defined in `gnuastro.c'. The user would have to define a
variable, the function would allocate space and pass the pointer to the
user's variable, and the user would have to free the allocated space: all
very complicated!

The problem was that in Gnuastro, the version is recorded in
`config.h'. This file is internal to Gnuastro and can't be installed, so
the version couldn't directly be used from it. To fix the problem, the
version is now written in `gnuastro.h' by `lib/Makefile' from
`lib/gnuastro.h.in'. So any change that is to be added in the final
`gnuastro.h' has to be implemented in `gnuastro.h.in'. But the great thing
is that the version is now a macro and can be very easily used.

With the change of this function, the tests (which currently only report
the version) also had to be re-written.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -31,33 +31,42 @@ libgnuastro_la_LDFLAGS = -version-info $(GAL_LT_VERSION)
 
 
 # Specify the library .c files
+BUILT_SOURCES = gnuastro/gnuastro.h
 libgnuastro_la_SOURCES = array.c box.c checkset.c configfiles.c fits.c  \
-  gnuastro.c linkedlist.c mesh.c mode.c polygon.c qsort.c               \
-  spatialconvolve.c statistics.c threads.c timing.c txtarray.c wcs.c
+  linkedlist.c mesh.c mode.c polygon.c qsort.c spatialconvolve.c        \
+  statistics.c threads.c timing.c txtarray.c wcs.c
 
 
 # Specify the installed headers, note that we are not blindly including all
 # `.h' files in the $(headersdir) directory. Some of the header files don't
 # need to be installed.
 headersdir=$(top_srcdir)/lib/gnuastro
-pkginclude_HEADERS = $(headersdir)/array.h $(headersdir)/box.h             \
-  $(headersdir)/checkset.h $(headersdir)/configfiles.h                     \
-  $(headersdir)/fits.h $(headersdir)/gnuastro.h $(headersdir)/linkedlist.h \
-  $(headersdir)/mesh.h $(headersdir)/mode.h $(headersdir)/polygon.h        \
-  $(headersdir)/qsort.h $(headersdir)/spatialconvolve.h			   \
-  $(headersdir)/statistics.h $(headersdir)/threads.h                       \
-  $(headersdir)/timing.h $(headersdir)/txtarray.h $(headersdir)/wcs.h
+pkginclude_HEADERS = gnuastro/gnuastro.h $(headersdir)/array.h             \
+  $(headersdir)/box.h $(headersdir)/checkset.h $(headersdir)/configfiles.h \
+  $(headersdir)/fits.h $(headersdir)/linkedlist.h $(headersdir)/mesh.h     \
+  $(headersdir)/mode.h $(headersdir)/polygon.h $(headersdir)/qsort.h       \
+  $(headersdir)/spatialconvolve.h $(headersdir)/statistics.h               \
+  $(headersdir)/threads.h $(headersdir)/timing.h $(headersdir)/txtarray.h  \
+  $(headersdir)/wcs.h
 
 
 # Definitions for Gnuastro's the pkg-config file (inspired from GSL's
 # Makefile.am)
-CLEANFILES = gnuastro.pc
-EXTRA_DIST = gnuastro.pc.in
 pkgconfig_DATA = gnuastro.pc
 pkgconfigdir = $(libdir)/pkgconfig
+EXTRA_DIST = gnuastro.pc.in gnuastro.h.in
+CLEANFILES = gnuastro.pc gnuastro/gnuastro.h
 
-# Build Gnuastro's pkg-config file based on the information in the
-# Makefile after the Makefile has been built.
+
+# Build Gnuastro's pkg-config file and `gnuastro.h' based on the
+# information in the Makefile after the Makefile has been built.
+gnuastro/gnuastro.h: Makefile gnuastro.h.in
+	rm -f $@ $@.tmp
+	$(MKDIR_P) gnuastro
+	$(SED) -e 's|@VERSION[@]|$(VERSION)|g' $(srcdir)/gnuastro.h.in >> $@.tmp
+	chmod a-w $@.tmp
+	mv $@.tmp $@
+
 gnuastro.pc: Makefile $(srcdir)/gnuastro.pc.in
 	rm -f $@ $@.tmp
 	$(SED)                                      \
@@ -67,6 +76,9 @@ gnuastro.pc: Makefile $(srcdir)/gnuastro.pc.in
 	-e 's|@includedir[@]|$(includedir)|g'       \
 	-e 's|@LIBS[@]|$(LIBS)|g'                   \
 	-e 's|@VERSION[@]|$(VERSION)|g'             \
-	'$(srcdir)/$@.in' >>$@.tmp
+	'$(srcdir)/$@.in' >> $@.tmp
 	chmod a-w $@.tmp
 	mv $@.tmp $@
+
+clean-local:
+	rm -rf gnuastro
