threads.h documented, pthread_barrier usable outside
The inclusion of the `pthread_barrier' definitions and declarations in
`lib/gnuastro/threads.h' and `lib/threads.c' was not suitable for
libraries. Because the `HAVE_PTHREAD_BARRIER' macro that was used to define
them was defined in `config.h' which is not installed. So if someone's
operating system doesn't have `pthread_barrier' constructs, none of
Gnuastro's threading will work for them. So several new things were added
with this commit:

 - A new `IN_GNUASTRO_BUILD' macro is now defined in `config.h' which will
   let the headers know that they are in the pre-installation environment,
   not in the post-installation.

 - The `GAL_GNUASTRO_PTHREAD_BARRIER' was added to `lib/gnuastro.h.in' as
   another one of the installation parameters that installed headers should
   know about.

 - The `pthread_barrier' functions and structures are now only defined (in
   the `.c' and `.h' files) when `GAL_GNUASTRO_PTHREAD_BARRIER == 0'.

 - A test was added to `make check' to test the compiling and building of a
   multi-threaded program on the user's system. This can be useful as a
   tutorial for users to easily build multi-threaded programs and also
   allow users to widely test this feature easily as part of the checking
   package.

The declarations and definitions of `threads.h' are also now fully
documented within the book. In the process, some variables in the source
were also renamed to be more descriptive of their nature.

--- a/configure.ac
+++ b/configure.ac
@@ -79,6 +79,20 @@ LT_INIT
 
 
 
+# This macro will let the libraries know that we are now in the Gnuastro
+# build system, not on the user's system. While we are building Gnuastro,
+# we have the important installation information in `config.h'. But in the
+# user's own programs, this information is defined in
+# `gnuastro/gnuastro.h'. With this macro, the installed headers can decide
+# if the latter should be included or not. Note that `gnuastro/gnuastro.h'
+# is only built at installation time and doesn't exist when building
+# Gnuastro. Therefore, this macro must not be defined in a user's program.
+AC_DEFINE([IN_GNUASTRO_BUILD], [1], [In building, not usage])
+
+
+
+
+
 # Generic flags for all subdirectories. Note that when order matters, we
 # want the user values to be set (and thus used) after the default
 # values. The "AM_" versions of these variables will be confined to the
@@ -134,8 +148,11 @@ AC_SEARCH_LIBS([wcspih], [wcs], [],
 AC_CHECK_LIB([wcs], [wcslib_version],
              [AC_DEFINE([HAVE_WCSLIBVERSION], [1], [Has wcslib_version])],
              [], [-lcfitsio -lm])
-AC_CHECK_LIB([pthread], [pthread_barrier_wait],
-             [AC_DEFINE([HAVE_PTHREAD_BARRIER], [1], [Has pthread_barrier])])
+AC_CHECK_LIB([pthread], [pthread_barrier_wait], [has_pthread_barrier=1],
+             [has_pthread_barrier=0])
+AC_DEFINE_UNQUOTED([GAL_GNUASTRO_PTHREAD_BARRIER], [$has_pthread_barrier],
+                   [System has pthread_barrier])
+AC_SUBST(HAS_PTHREAD_BARRIER, [$has_pthread_barrier])
 
 
 
