--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -56,9 +56,10 @@ export hasghostscript=$(MAYBE_HASGHOSTSCRIPT);
 
 # Compilations that are to be done with `make check'.
 LDADD = -lgnuastro
-check_PROGRAMS = versioncpp arraymanip
+check_PROGRAMS = versioncpp arraymanip multithread
 arraymanip_SOURCES = lib/arraymanip.c
 versioncpp_SOURCES = lib/versioncpp.cpp
+multithread_SOURCES = lib/multithread.c
 
 
 
