Updated the manual webpage CSS
The manual's webpage CSS has been completely re-written to be much more
responsive and easier to read. The OpenSans webfont was adopted, images,
headers, footnotes, initial paragraph indentations and some other things
were made to become more similar to printed documents (easier to read).

--- a/.gitignore
+++ b/.gitignore
@@ -105,8 +105,11 @@ astarithmetic
 astnoisechisel
 astsubtractsky
 autom4te.cache
+lib/gnuastro.h
+lib/gnuastro.pc
 doc/gnuastro.cps
 doc/gnuastro.vrs
+lib/gnuastro/gnuastro.h
 
 
 
