Plank 2015 cosmological parameters set as default
The Plank 2015 results were recently (20 September 2016) published, so the
default parameters of CosmicCalculator have been updated. This follows the
discussion in bug #47872.

--- a/bin/cosmiccal/astcosmiccal.conf
+++ b/bin/cosmiccal/astcosmiccal.conf
@@ -22,20 +22,19 @@
 # ========
 #
 # The current default cosmological values in CosmicCalculator are taken
-# from the Planck 2013 results (paper XVI, link below, Table 2,
-# Plank+lensing). These are the most recent accepted (by journal editors)
-# Plank results until this release of Gnuastro.
+# from the Planck 2015 results (paper XIII, A&A 594, A13 (2016), Table 4,
+# page 31, last column: "TT,TE,EE+lowP+lensing+ext").
 #
-# http://adsabs.harvard.edu/abs/2014A%26A...571A..16P
+# http://www.aanda.org/articles/aa/full_html/2016/10/aa25830-15/aa25830-15.html
 #
 # IMPORTANT NOTES: If you change these system-wide default values, please
 # change this comment and cite the source.
 
 # Input:
  redshift            1
- H0              68.14
- olambda        0.6964
- omatter        0.3036
+ H0              67.74
+ olambda        0.6911
+ omatter        0.3089
  oradiation        0.0
 
 # Output:
