Non-installed headers moved to lib/
Until now, the non-installed header files were mixed with the installed
ones in `lib/gnuastro/' this made them hard to manage and would also make
the code harder to read for a user: which headers can a user also use in
their own programs and which are internal to Gnuastro?

So the internal headers are now mixed with the library `.c' source files in
`lib/' and `lib/gnuastro/' is only used for those headers that will be
installed.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -97,7 +97,7 @@ endif
 # it. Unfortunately as far as I know, pattern rules are not portable in all
 # implementations of Make, so we have to list all the utilities manually.
 toputildir=$(top_builddir)/bin
-ALLMANSDEP = $(top_srcdir)/lib/gnuastro/commonargs.h
+ALLMANSDEP = $(top_srcdir)/lib/commonargs.h
 man/astarithmetic.1: $(top_srcdir)/bin/arithmetic/args.h  $(ALLMANSDEP)
 	$(MAYBE_HELP2MAN) $(toputildir)/arithmetic/astarithmetic
 man/astconvertt.1: $(top_srcdir)/bin/convertt/args.h  $(ALLMANSDEP)
