--- a/lib/gnuastro.h.in
+++ b/lib/gnuastro.h.in
@@ -30,7 +30,7 @@ along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
 /* Macros. In gnuastro.h.in, the values in `@' --- `@'', will be replaced
    with installation specific values. */
 #define GAL_GNUASTRO_VERSION "@VERSION@"
-#define GAL_GNUASTRO_PTHREAD_BARRIER @HAS_PTHREAD_BARRIER@
+#define GAL_GNUASTRO_HAVE_PTHREAD_BARRIER @HAVE_PTHREAD_BARRIER@
 
 
 
