Some minor spell checkings
In several places `output' and `parameter' were written as `ouput' and
`paramter'. They were both corrected.

--- a/bin/noisechisel/astnoisechisel.conf
+++ b/bin/noisechisel/astnoisechisel.conf
@@ -1,7 +1,7 @@
 # Default parameters (System) for NoiseChisel.
 # NoiseChisel is part of GNU Astronomy Utitlies.
 #
-# Use the long option name of each paramter followed by
+# Use the long option name of each parameter followed by
 # a value. The name and value should be separated by
 # atleast one of the following charaacters:
 # space, `,`, `=` or `:`
